--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,8 +39,8 @@ services:
     build:
       context: ./CustomMetricsPOC
     container_name: custom-metrics
-    # volumes:
-    #   - ./database:/app/database
+    volumes:
+      - ./CustomMetricsPOC/Store.db:/app/database/Store.db
     ports:
       - 8080:8080
       - 8081:8081
