refactor: improve Dockerfile structure

--- a/CustomMetricsPOC/Dockerfile
+++ b/CustomMetricsPOC/Dockerfile
@@ -2,13 +2,14 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /source
 
-# Copy all files
-COPY . ./CustomMetricsPOC
-WORKDIR /source/CustomMetricsPOC
+# Copy all files into /source
+COPY . .
+
+# Restore dependencies
 RUN dotnet restore
 
 # Build the app
-RUN dotnet publish -c release -o /app --no-restore
+RUN dotnet publish -c release -o /app
 
 # Final Stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-bookworm-slim
@@ -20,8 +21,8 @@ RUN mkdir -p /app/Database
 # Copy the published app files
 COPY --from=build /app ./
 
-# Copy the SQLite database file from the build stage to the final container
-COPY --from=build /source/CustomMetricsPOC/Store.db /app/Database/Store.db
+# Copy the SQLite database file
+COPY --from=build /source/Store.db /app/Database/Store.db
 
 EXPOSE 8080
 EXPOSE 8081
